src/libbulletc/src/btSoftBody_wrap.h



	EXPORT btSoftBody_Note* btSoftBody_Note_new();

	EXPORT btScalar* btSoftBody_Note_getCoords(btSoftBody_Note* obj);

	//EXPORT * btSoftBody_Note_getNodes(btSoftBody_Note* obj);
	EXPORT void btSoftBody_Note_getOffset(btSoftBody_Note* obj);

	EXPORT int btSoftBody_Note_getRank(btSoftBody_Note* obj);

	EXPORT const char* btSoftBody_Note_getText(btSoftBody_Note* obj);

	EXPORT void btSoftBody_Note_setCoords(btSoftBody_Note* obj, btScalar* value);

	//EXPORT void btSoftBody_Note_setNodes(btSoftBody_Note* obj, * value);
	//EXPORT void btSoftBody_Note_setOffset(btSoftBody_Note* obj, void value);
	EXPORT void btSoftBody_Note_setRank(btSoftBody_Note* obj, int value);

	EXPORT void btSoftBody_Note_setText(btSoftBody_Note* obj, char* value);


	EXPORT btSoftBody_Pose* btSoftBody_Pose_new();

	EXPORT void btSoftBody_Pose_getAqq(btSoftBody_Pose* obj);

	EXPORT bool btSoftBody_Pose_getBframe(btSoftBody_Pose* obj);

	EXPORT bool btSoftBody_Pose_getBvolume(btSoftBody_Pose* obj);

	EXPORT void btSoftBody_Pose_getCom(btSoftBody_Pose* obj);

	//EXPORT btAlignedObjectArray* btSoftBody_Pose_getPos(btSoftBody_Pose* obj);
	EXPORT void btSoftBody_Pose_getRot(btSoftBody_Pose* obj);

	EXPORT void btSoftBody_Pose_getScl(btSoftBody_Pose* obj);

	//EXPORT btAlignedObjectArray* btSoftBody_Pose_getWgh(btSoftBody_Pose* obj);
	EXPORT btScalar btSoftBody_Pose_getVolume(btSoftBody_Pose* obj);

	//EXPORT void btSoftBody_Pose_setAqq(btSoftBody_Pose* obj, void value);
	EXPORT void btSoftBody_Pose_setBframe(btSoftBody_Pose* obj, bool value);

	EXPORT void btSoftBody_Pose_setBvolume(btSoftBody_Pose* obj, bool value);

	//EXPORT void btSoftBody_Pose_setCom(btSoftBody_Pose* obj, void value);
	//EXPORT void btSoftBody_Pose_setPos(btSoftBody_Pose* obj, btAlignedObjectArray* value);
	//EXPORT void btSoftBody_Pose_setRot(btSoftBody_Pose* obj, void value);
	//EXPORT void btSoftBody_Pose_setScl(btSoftBody_Pose* obj, void value);
	//EXPORT void btSoftBody_Pose_setWgh(btSoftBody_Pose* obj, btAlignedObjectArray* value);
	EXPORT void btSoftBody_Pose_setVolume(btSoftBody_Pose* obj, btScalar value);

	EXPORT void btSoftBody_Pose_delete(btSoftBody_Pose* obj);


	EXPORT btSoftBody_Cluster* btSoftBody_Cluster_new();

	EXPORT btScalar btSoftBody_Cluster_getAdamping(btSoftBody_Cluster* obj);

	EXPORT void btSoftBody_Cluster_getAv(btSoftBody_Cluster* obj);

	EXPORT int btSoftBody_Cluster_getClusterIndex(btSoftBody_Cluster* obj);

	EXPORT bool btSoftBody_Cluster_getCollide(btSoftBody_Cluster* obj);

	EXPORT void btSoftBody_Cluster_getCom(btSoftBody_Cluster* obj);

	EXPORT bool btSoftBody_Cluster_getContainsAnchor(btSoftBody_Cluster* obj);

	EXPORT btScalar* btSoftBody_Cluster_getDimpulses(btSoftBody_Cluster* obj);

	//EXPORT btAlignedObjectArray* btSoftBody_Cluster_getFramerefs(btSoftBody_Cluster* obj);
	EXPORT void btSoftBody_Cluster_getFramexform(btSoftBody_Cluster* obj);

	EXPORT btScalar btSoftBody_Cluster_getIdmass(btSoftBody_Cluster* obj);

	EXPORT btScalar btSoftBody_Cluster_getImass(btSoftBody_Cluster* obj);

	EXPORT void btSoftBody_Cluster_getInvwi(btSoftBody_Cluster* obj);

	EXPORT btScalar btSoftBody_Cluster_getLdamping(btSoftBody_Cluster* obj);

	EXPORT btDbvtNode* btSoftBody_Cluster_getLeaf(btSoftBody_Cluster* obj);

	EXPORT void btSoftBody_Cluster_getLocii(btSoftBody_Cluster* obj);

	EXPORT void btSoftBody_Cluster_getLv(btSoftBody_Cluster* obj);

	//EXPORT btAlignedObjectArray* btSoftBody_Cluster_getMasses(btSoftBody_Cluster* obj);
	EXPORT btScalar btSoftBody_Cluster_getMatching(btSoftBody_Cluster* obj);

	EXPORT btScalar btSoftBody_Cluster_getMaxSelfCollisionImpulse(btSoftBody_Cluster* obj);

	EXPORT btScalar btSoftBody_Cluster_getNdamping(btSoftBody_Cluster* obj);

	EXPORT int btSoftBody_Cluster_getNdimpulses(btSoftBody_Cluster* obj);

	EXPORT void btSoftBody_Cluster_getNodes(btSoftBody_Cluster* obj);

	EXPORT int btSoftBody_Cluster_getNvimpulses(btSoftBody_Cluster* obj);

	EXPORT btScalar btSoftBody_Cluster_getSelfCollisionImpulseFactor(btSoftBody_Cluster* obj);

	EXPORT btScalar* btSoftBody_Cluster_getVimpulses(btSoftBody_Cluster* obj);

	EXPORT void btSoftBody_Cluster_setAdamping(btSoftBody_Cluster* obj, btScalar value);

	//EXPORT void btSoftBody_Cluster_setAv(btSoftBody_Cluster* obj, void value);
	EXPORT void btSoftBody_Cluster_setClusterIndex(btSoftBody_Cluster* obj, int value);

	EXPORT void btSoftBody_Cluster_setCollide(btSoftBody_Cluster* obj, bool value);

	//EXPORT void btSoftBody_Cluster_setCom(btSoftBody_Cluster* obj, void value);
	EXPORT void btSoftBody_Cluster_setContainsAnchor(btSoftBody_Cluster* obj, bool value);

	EXPORT void btSoftBody_Cluster_setDimpulses(btSoftBody_Cluster* obj, btScalar* value);

	//EXPORT void btSoftBody_Cluster_setFramerefs(btSoftBody_Cluster* obj, btAlignedObjectArray* value);
	//EXPORT void btSoftBody_Cluster_setFramexform(btSoftBody_Cluster* obj, void value);
	EXPORT void btSoftBody_Cluster_setIdmass(btSoftBody_Cluster* obj, btScalar value);

	EXPORT void btSoftBody_Cluster_setImass(btSoftBody_Cluster* obj, btScalar value);

	//EXPORT void btSoftBody_Cluster_setInvwi(btSoftBody_Cluster* obj, void value);
	EXPORT void btSoftBody_Cluster_setLdamping(btSoftBody_Cluster* obj, btScalar value);

	EXPORT void btSoftBody_Cluster_setLeaf(btSoftBody_Cluster* obj, btDbvtNode* value);

	//EXPORT void btSoftBody_Cluster_setLocii(btSoftBody_Cluster* obj, void value);
	//EXPORT void btSoftBody_Cluster_setLv(btSoftBody_Cluster* obj, void value);
	//EXPORT void btSoftBody_Cluster_setMasses(btSoftBody_Cluster* obj, btAlignedObjectArray* value);
	EXPORT void btSoftBody_Cluster_setMatching(btSoftBody_Cluster* obj, btScalar value);

	EXPORT void btSoftBody_Cluster_setMaxSelfCollisionImpulse(btSoftBody_Cluster* obj, btScalar value);

	EXPORT void btSoftBody_Cluster_setNdamping(btSoftBody_Cluster* obj, btScalar value);

	EXPORT void btSoftBody_Cluster_setNdimpulses(btSoftBody_Cluster* obj, int value);

	//EXPORT void btSoftBody_Cluster_setNodes(btSoftBody_Cluster* obj, void value);
	EXPORT void btSoftBody_Cluster_setNvimpulses(btSoftBody_Cluster* obj, int value);

	EXPORT void btSoftBody_Cluster_setSelfCollisionImpulseFactor(btSoftBody_Cluster* obj, btScalar value);

	EXPORT void btSoftBody_Cluster_setVimpulses(btSoftBody_Cluster* obj, btScalar* value);

	EXPORT void btSoftBody_Cluster_delete(btSoftBody_Cluster* obj);