src/BulletSharpPInvoke/SoftBody/SoftBody.cs


		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Note_new();
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Note_getCoords(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Note_getNodes(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Note_getOffset(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern int btSoftBody_Note_getRank(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern string btSoftBody_Note_getText(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Note_setCoords(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Note_setNodes(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Note_setOffset(IntPtr obj, Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Note_setRank(IntPtr obj, int value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Note_setText(IntPtr obj, string value);
	}

	public class Pose
	{
		internal IntPtr _native;

		internal Pose(IntPtr native)
		{
			_native = native;
		}

		public Pose()
		{
			_native = btSoftBody_Pose_new();
		}
        /*
		public void Aqq
		{
			get { return btSoftBody_Pose_getAqq(_native); }
			set { btSoftBody_Pose_setAqq(_native, value._native); }
		}
        */
		public bool Bframe
		{
			get { return btSoftBody_Pose_getBframe(_native); }
			set { btSoftBody_Pose_setBframe(_native, value); }
		}

		public bool Bvolume
		{
			get { return btSoftBody_Pose_getBvolume(_native); }
			set { btSoftBody_Pose_setBvolume(_native, value); }
		}
        /*
		public void Com
		{
			get { return btSoftBody_Pose_getCom(_native); }
			set { btSoftBody_Pose_setCom(_native, value._native); }
		}

		public tVector3Array Pos
		{
			get { return btSoftBody_Pose_getPos(_native); }
			set { btSoftBody_Pose_setPos(_native, value._native); }
		}

		public void Rot
		{
			get { return btSoftBody_Pose_getRot(_native); }
			set { btSoftBody_Pose_setRot(_native, value._native); }
		}

		public void Scl
		{
			get { return btSoftBody_Pose_getScl(_native); }
			set { btSoftBody_Pose_setScl(_native, value._native); }
		}

		public tScalarArray Wgh
		{
			get { return btSoftBody_Pose_getWgh(_native); }
			set { btSoftBody_Pose_setWgh(_native, value._native); }
		}
        */
		public float Volume
		{
			get { return btSoftBody_Pose_getVolume(_native); }
			set { btSoftBody_Pose_setVolume(_native, value); }
		}

		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
				btSoftBody_Pose_delete(_native);
				_native = IntPtr.Zero;
			}
		}

		~Pose()
		{
			Dispose(false);
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Pose_new();
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Pose_getAqq(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern bool btSoftBody_Pose_getBframe(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern bool btSoftBody_Pose_getBvolume(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Pose_getCom(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Pose_getPos(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Pose_getRot(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Pose_getScl(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Pose_getWgh(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_Pose_getVolume(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Pose_setAqq(IntPtr obj, [In] ref Matrix value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Pose_setBframe(IntPtr obj, bool value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Pose_setBvolume(IntPtr obj, bool value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Pose_setCom(IntPtr obj, Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Pose_setPos(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btSoftBody_Pose_setRot(IntPtr obj, [In] ref Matrix value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btSoftBody_Pose_setScl(IntPtr obj, [In] ref Matrix value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Pose_setWgh(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Pose_setVolume(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Pose_delete(IntPtr obj);
	}

	public class Cluster
	{
		internal IntPtr _native;

		internal Cluster(IntPtr native)
		{
			_native = native;
		}

		public Cluster()
		{
			_native = btSoftBody_Cluster_new();
		}

		public float Adamping
		{
			get { return btSoftBody_Cluster_getAdamping(_native); }
			set { btSoftBody_Cluster_setAdamping(_native, value); }
		}
        /*
		public void Av
		{
			get { return btSoftBody_Cluster_getAv(_native); }
			set { btSoftBody_Cluster_setAv(_native, value._native); }
		}
        */
		public int ClusterIndex
		{
			get { return btSoftBody_Cluster_getClusterIndex(_native); }
			set { btSoftBody_Cluster_setClusterIndex(_native, value); }
		}

		public bool Collide
		{
			get { return btSoftBody_Cluster_getCollide(_native); }
			set { btSoftBody_Cluster_setCollide(_native, value); }
		}
        /*
		public void Com
		{
			get { return btSoftBody_Cluster_getCom(_native); }
			set { btSoftBody_Cluster_setCom(_native, value._native); }
		}
        */
		public bool ContainsAnchor
		{
			get { return btSoftBody_Cluster_getContainsAnchor(_native); }
			set { btSoftBody_Cluster_setContainsAnchor(_native, value); }
		}
        /*
		public Vector3 Dimpulses
		{
			get
			{
				Vector3 value;
				btSoftBody_Cluster_getDimpulses(_native, out value);
				return value;
			}
			set { btSoftBody_Cluster_setDimpulses(_native, ref value); }
		}

		public tVector3Array Framerefs
		{
			get { return btSoftBody_Cluster_getFramerefs(_native); }
			set { btSoftBody_Cluster_setFramerefs(_native, value._native); }
		}

		public void Framexform
		{
			get { return btSoftBody_Cluster_getFramexform(_native); }
			set { btSoftBody_Cluster_setFramexform(_native, value._native); }
		}
        */
		public float Idmass
		{
			get { return btSoftBody_Cluster_getIdmass(_native); }
			set { btSoftBody_Cluster_setIdmass(_native, value); }
		}

		public float Imass
		{
			get { return btSoftBody_Cluster_getImass(_native); }
			set { btSoftBody_Cluster_setImass(_native, value); }
		}
        /*
		public void Invwi
		{
			get { return btSoftBody_Cluster_getInvwi(_native); }
			set { btSoftBody_Cluster_setInvwi(_native, value._native); }
		}
        */
		public float Ldamping
		{
			get { return btSoftBody_Cluster_getLdamping(_native); }
			set { btSoftBody_Cluster_setLdamping(_native, value); }
		}
        /*
		public DbvtNode Leaf
		{
			get { return btSoftBody_Cluster_getLeaf(_native); }
			set { btSoftBody_Cluster_setLeaf(_native, value._native); }
		}

		public void Locii
		{
			get { return btSoftBody_Cluster_getLocii(_native); }
			set { btSoftBody_Cluster_setLocii(_native, value._native); }
		}

		public void Lv
		{
			get { return btSoftBody_Cluster_getLv(_native); }
			set { btSoftBody_Cluster_setLv(_native, value._native); }
		}

		public tScalarArray Masses
		{
			get { return btSoftBody_Cluster_getMasses(_native); }
			set { btSoftBody_Cluster_setMasses(_native, value._native); }
		}
        */
		public float Matching
		{
			get { return btSoftBody_Cluster_getMatching(_native); }
			set { btSoftBody_Cluster_setMatching(_native, value); }
		}

		public float MaxSelfCollisionImpulse
		{
			get { return btSoftBody_Cluster_getMaxSelfCollisionImpulse(_native); }
			set { btSoftBody_Cluster_setMaxSelfCollisionImpulse(_native, value); }
		}

		public float Ndamping
		{
			get { return btSoftBody_Cluster_getNdamping(_native); }
			set { btSoftBody_Cluster_setNdamping(_native, value); }
		}

		public int Ndimpulses
		{
			get { return btSoftBody_Cluster_getNdimpulses(_native); }
			set { btSoftBody_Cluster_setNdimpulses(_native, value); }
		}
        /*
		public void Nodes
		{
			get { return btSoftBody_Cluster_getNodes(_native); }
			set { btSoftBody_Cluster_setNodes(_native, value._native); }
		}
        */
		public int Nvimpulses
		{
			get { return btSoftBody_Cluster_getNvimpulses(_native); }
			set { btSoftBody_Cluster_setNvimpulses(_native, value); }
		}

		public float SelfCollisionImpulseFactor
		{
			get { return btSoftBody_Cluster_getSelfCollisionImpulseFactor(_native); }
			set { btSoftBody_Cluster_setSelfCollisionImpulseFactor(_native, value); }
		}
        /*
		public Vector3 Vimpulses
		{
			get
			{
				Vector3 value;
				btSoftBody_Cluster_getVimpulses(_native, out value);
				return value;
			}
			set { btSoftBody_Cluster_setVimpulses(_native, ref value); }
		}
        */
		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
				btSoftBody_Cluster_delete(_native);
				_native = IntPtr.Zero;
			}
		}

		~Cluster()
		{
			Dispose(false);
		}
